# cppCMakeStart

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README  null.d
src/: CMakeLists.txt  concur.cpp  cpp_main_CM.cpp
src/OS_help/: CMakeLists.txt  discoverOS.cpp  discoverOS.hpp
src/include/: concur.hpp
